gccida/g1/peephole2_optimize
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/peephole2_optimize/src/recog.c:3559:1: error: use of undeclared identifier 'peep2_insn_data_0'; did you mean 'peep2_insn_data'?
peep2_insn_data_0[0].insn = 0LL; 
^~~~~~~~~~~~~~~~~
peep2_insn_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/peephole2_optimize/src/recog.c:2841:31: note: 'peep2_insn_data' declared here
static struct peep2_insn_data peep2_insn_data[MAX_INSNS_PER_PEEP2 + 1];
                              ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/peephole2_optimize/src/recog.c:3560:1: error: use of undeclared identifier 'peep2_insn_data_0'; did you mean 'peep2_insn_data'?
peep2_insn_data_0[1].insn = 0LL; 
^~~~~~~~~~~~~~~~~
peep2_insn_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/peephole2_optimize/src/recog.c:2841:31: note: 'peep2_insn_data' declared here
static struct peep2_insn_data peep2_insn_data[MAX_INSNS_PER_PEEP2 + 1];
                              ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/peephole2_optimize/src/recog.c:3561:1: error: use of undeclared identifier 'peep2_insn_data_0'; did you mean 'peep2_insn_data'?
peep2_insn_data_0[2].insn = 0LL; 
^~~~~~~~~~~~~~~~~
peep2_insn_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/peephole2_optimize/src/recog.c:2841:31: note: 'peep2_insn_data' declared here
static struct peep2_insn_data peep2_insn_data[MAX_INSNS_PER_PEEP2 + 1];
                              ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/peephole2_optimize/src/recog.c:3562:1: error: use of undeclared identifier 'peep2_insn_data_0'; did you mean 'peep2_insn_data'?
peep2_insn_data_0[3].insn = 0LL; 
^~~~~~~~~~~~~~~~~
peep2_insn_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/peephole2_optimize/src/recog.c:2841:31: note: 'peep2_insn_data' declared here
static struct peep2_insn_data peep2_insn_data[MAX_INSNS_PER_PEEP2 + 1];
                              ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/peephole2_optimize/src/recog.c:3563:1: error: use of undeclared identifier 'peep2_insn_data_0'; did you mean 'peep2_insn_data'?
peep2_insn_data_0[4].insn = global_rtl[0]; 
^~~~~~~~~~~~~~~~~
peep2_insn_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/peephole2_optimize/src/recog.c:2841:31: note: 'peep2_insn_data' declared here
static struct peep2_insn_data peep2_insn_data[MAX_INSNS_PER_PEEP2 + 1];
                              ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/peephole2_optimize/src/recog.c:3566:14: error: use of undeclared identifier 'peep2_insn_data_0'; did you mean 'peep2_insn_data'?
bitmap_copy( peep2_insn_data_0[4].live_before, live); 
             ^~~~~~~~~~~~~~~~~
             peep2_insn_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/peephole2_optimize/src/recog.c:2841:31: note: 'peep2_insn_data' declared here
static struct peep2_insn_data peep2_insn_data[MAX_INSNS_PER_PEEP2 + 1];
                              ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/peephole2_optimize/src/recog.c:3572:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
end = ( rtx)end[1]; 
            ^~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/peephole2_optimize/src/recog.c:3579:1: error: use of undeclared identifier 'peep2_insn_data_0'; did you mean 'peep2_insn_data'?
peep2_insn_data_0[v25].insn = ( rtx)v23; 
^~~~~~~~~~~~~~~~~
peep2_insn_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/peephole2_optimize/src/recog.c:2841:31: note: 'peep2_insn_data' declared here
static struct peep2_insn_data peep2_insn_data[MAX_INSNS_PER_PEEP2 + 1];
                              ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/peephole2_optimize/src/recog.c:3581:14: error: use of undeclared identifier 'peep2_insn_data_0'; did you mean 'peep2_insn_data'?
bitmap_copy( peep2_insn_data_0[peep2_current].live_before, live); 
             ^~~~~~~~~~~~~~~~~
             peep2_insn_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/peephole2_optimize/src/recog.c:2841:31: note: 'peep2_insn_data' declared here
static struct peep2_insn_data peep2_insn_data[MAX_INSNS_PER_PEEP2 + 1];
                              ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/peephole2_optimize/src/recog.c:3594:8: error: use of undeclared identifier 'peep2_insn_data_0'; did you mean 'peep2_insn_data'?
insn = peep2_insn_data_0[v27].insn; 
       ^~~~~~~~~~~~~~~~~
       peep2_insn_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/peephole2_optimize/src/recog.c:2841:31: note: 'peep2_insn_data' declared here
static struct peep2_insn_data peep2_insn_data[MAX_INSNS_PER_PEEP2 + 1];
                              ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/peephole2_optimize/src/recog.c:3625:21: error: assigning to 'uint64' (aka 'unsigned long long') from incompatible type 'struct rtx_def'
*( _QWORD *)&v13[4] = insn[4]; 
                    ^ ~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/peephole2_optimize/src/recog.c:3626:30: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
for ( v14.rtwint = ( __int64)insn[3].fld[0]; v14.rtwint; v14.rtwint = *( __int64 *)( v14.rtwint + 16) ) 
                             ^~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/peephole2_optimize/src/recog.c:3632:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)v15, 
  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/peephole2_optimize/src/recog.c:3641:17: error: use of undeclared identifier 'peep2_insn_data_0'
if ( *( _WORD *)peep2_insn_data_0[v30].insn == 34 ) 
                ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/peephole2_optimize/src/recog.c:3651:23: error: use of undeclared identifier 'peep2_insn_data_0'; did you mean 'peep2_insn_data'?
note = find_reg_note( peep2_insn_data_0[v6].insn, REG_EH_REGION, 0LL); 
                      ^~~~~~~~~~~~~~~~~
                      peep2_insn_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/peephole2_optimize/src/recog.c:2841:31: note: 'peep2_insn_data' declared here
static struct peep2_insn_data peep2_insn_data[MAX_INSNS_PER_PEEP2 + 1];
                              ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/peephole2_optimize/src/recog.c:3652:28: error: use of undeclared identifier 'peep2_insn_data_0'; did you mean 'peep2_insn_data'?
v7 = emit_insn_after( v26, peep2_insn_data_0[v6].insn); 
                           ^~~~~~~~~~~~~~~~~
                           peep2_insn_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/peephole2_optimize/src/recog.c:2841:31: note: 'peep2_insn_data' declared here
static struct peep2_insn_data peep2_insn_data[MAX_INSNS_PER_PEEP2 + 1];
                              ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/peephole2_optimize/src/recog.c:3654:31: error: use of undeclared identifier 'peep2_insn_data_0'; did you mean 'peep2_insn_data'?
delete_insn_chain( ( rtx)v23, peep2_insn_data_0[v6].insn); 
                              ^~~~~~~~~~~~~~~~~
                              peep2_insn_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/peephole2_optimize/src/recog.c:2841:31: note: 'peep2_insn_data' declared here
static struct peep2_insn_data peep2_insn_data[MAX_INSNS_PER_PEEP2 + 1];
                              ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/peephole2_optimize/src/recog.c:3694:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v17 = ( rtx)v17[1]; 
            ^~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/peephole2_optimize/src/recog.c:3705:20: error: use of undeclared identifier 'peep2_insn_data_0'; did you mean 'peep2_insn_data'?
bitmap_copy( live, peep2_insn_data_0[v9].live_before); 
                   ^~~~~~~~~~~~~~~~~
                   peep2_insn_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/peephole2_optimize/src/recog.c:2841:31: note: 'peep2_insn_data' declared here
static struct peep2_insn_data peep2_insn_data[MAX_INSNS_PER_PEEP2 + 1];
                              ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/peephole2_optimize/src/obj/recog.o] Error 1
